# vcsgraph

./: .gitignore  Cargo.toml  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: breezy-tests.yml  pythonpackage.yml  rust-publish.yml  rust.yml  wheels.yaml
crates/graph/: Cargo.toml  README.md
crates/graph-py/: Cargo.toml
crates/graph-py/src/: lib.rs
crates/graph/src/: bfs.rs  graph.rs  known_graph.rs  lib.rs  parents_provider.rs  test.rs  tsort.rs
vcsgraph/: __init__.py  errors.py  graph.py  known_graph.py
vcsgraph/tests/: __init__.py  test_graph.py
